Created card list component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer base {
+  body {
+    @apply font-inter text-white bg-black-100;
+  }
+
+  
+  h3 {
+    @apply font-bold text-lg leading-none;
+  }
+
+  p {
+    @apply text-sm leading-normal;
+  }
+
+  .subTitle {
+    @apply text-base font-bold leading-4;
+  }
+
 }
